# radio-scout

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  build.rs
.config/: nextest.toml
client/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.test.tsx  App.tsx  fonts.d.ts  index.css  main.tsx  types.ts
client/src/components/: StatusLed.test.tsx  StatusLed.tsx
client/src/components/layout/: AppShell.tsx  BottomTabBar.test.tsx  BottomTabBar.tsx  Screen.tsx
client/src/components/ui/: button.tsx
client/src/lib/: led.test.ts  led.ts  utils.test.ts
client/src/routes/: LiveScreen.tsx  SearchScreen.test.tsx  SearchScreen.tsx  SettingsScreen.test.tsx  SettingsScreen.tsx  TalkgroupsScreen.test.tsx  TalkgroupsScreen.tsx
client/src/store/: api.test.ts  api.ts  hooks.ts  store.ts
client/src/test/: handlers.ts  setup.ts  vitest-axe.d.ts
docs/adr/: 0001-ingest-compatible-own-live-feed-protocol.md  0002-audio-object-storage.md  0003-database-sqlite-postgres.md  0004-live-feed-raw-websocket.md  0005-client-audio-media-session-background.md  0006-optional-rust-native-audio-enhancement.md  0007-single-binary-embedded-frontend-distribution.md  0008-security-posture.md  0009-testing-strategy.md  0010-coverage-policy-and-test-tooling.md
docs/design/: brief.md
docs/design/mockups/: README.md  live-scanner.dc.html
docs/prd/: radio-scout-v1.md
docs/research/: aac-muxing-and-patent-posture.md  audio-pipeline.md  ios-background-audio.md
docs/spec/: radio-scout-v1.md
src/: blob.rs  call.rs  ingest.rs  lib.rs  live.rs  main.rs  store.rs  web.rs
src/db/: migration.rs  mod.rs  repo.rs
src/db/entities/: api_key.rs  call.rs  call_frequency.rs  call_patch.rs  call_unit.rs  group.rs  mod.rs  site.rs  system.rs  tag.rs  talkgroup.rs  talkgroup_group.rs  unit.rs
src/snapshots/: radio_scout__call__tests__stored_call_full.snap  radio_scout__call__tests__stored_call_minimal.snap
tests/: blob.rs  db.rs  frontend.rs  golden.rs  ingest.rs  live.rs  serve_audio.rs  skeleton.rs
tests/common/: mod.rs
tests/fixtures/: README.md  gen_fixtures.py  sdrtrunk-call-upload.multipart  trunk-recorder-call-upload.multipart  trunk-recorder-native-meta.multipart
